--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -23,9 +23,7 @@
         </div>
          <!-- footer -->
             <!-- ============================================================== -->
-            <footer class="footer">
-                © 2017 Admin Pro by wrappixel.com
-            </footer>
+            <footer class="footer">© {{year}} Admin Pro.</footer>
             <!-- ============================================================== -->
             <!-- End footer -->
     </div>
