--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,14 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-donnut title="Ventas"></app-donnut>
+    </div>
+    <div class="col-6">
+        <app-donnut title="Compras" [labels]="labels1" [data]="data1"></app-donnut>
+    </div>
+    <div class="col-6">
+        <app-donnut title="MarketPlace"></app-donnut>
+    </div>
+    <div class="col-6">
+        <app-donnut title="Otros Gastos"></app-donnut>
+    </div>
+</div>
