--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -5,26 +5,25 @@
         <div class="container-fluid">
             <!-- Router System -->
             <app-breadcrumbs></app-breadcrumbs>
-
+            <router-outlet></router-outlet>
             <!-- Start Page Content -->
             <!-- ============================================================== -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <router-outlet></router-outlet>
-                            
+
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ============================================================== -->
             <!-- End PAge Content -->
         </div>
-         <!-- footer -->
-            <!-- ============================================================== -->
-            <footer class="footer">© {{year}} Admin Pro.</footer>
-            <!-- ============================================================== -->
-            <!-- End footer -->
+        <!-- footer -->
+        <!-- ============================================================== -->
+        <footer class="footer">© {{year}} Admin Pro.</footer>
+        <!-- ============================================================== -->
+        <!-- End footer -->
     </div>
 </div>
