--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,29 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Striped Progress bar <a class="get-code" data-toggle="collapse" href="#pgr3" aria-expanded="true"><i class="fa fa-code" title="" data-toggle="tooltip" data-original-title="Get Code"></i></a></h4>
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-primary progress-bar-striped active" style="height:8px;" [style.width]="getProgreso1" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
+                </div>
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-info progress-bar-striped active" style="height:8px;" [style.width]="getProgreso2" role="progressbar"> <span class="sr-only">85% Complete (success)</span> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-adder (value)="progreso1 = $event" [value]="progreso1"></app-adder>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-adder [btnClass]="'btn-info'" (value)="progreso2 = $event" [value]="progreso1"></app-adder>
+            </div>
+        </div>
+    </div>
+</div>
