--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
                 <li class="nav-small-cap">PERSONAL</li>
                 <li *ngFor="let item of menuItems"> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">{{item.title}}<span class="label label-rouded label-themecolor pull-right">{{item.submenu.length}}</span></span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li *ngFor="let subitem of item.submenu"><a [routerLink]="subitem.url">{{subitem.title}}</a></li>
+                        <li *ngFor="let subitem of item.submenu"><a [routerLink]="subitem.url" routerLinkActive='active' [routerLinkActiveOptions]="{exact : true}">{{subitem.title}}</a></li>
                     </ul>
                 </li>
                 <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Apps</span></a>
